# lib_qt5

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeLists.txt  FindExtHarfBuzz.cmake  FindExtProject.cmake  FindExtSQLite3.cmake  PackageConfig.cmake.in  PackageConfigCurrent.cmake.in  mac_rpath_fix.py  qt_conf.cmake.in  util.cmake
patch/: mac2.patch  mac3.patch  openssl11.patch  xcode91.patch
